--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="resource/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<h1>Hello, world!</h1>
+	<h1>Hello, world!!</h1>
 	<code>&lt;section&gt;</code>
 	<pre><code class="language-html xml"><span class="comment">&lt;!-- Standard button --&gt;</span>
 <span class="tag">&lt;<span class="title">button</span> <span class="attribute">type</span>=<span class="value">"button"</span> <span class="attribute">class</span>=<span class="value">"btn btn-default"</span>&gt;</span>Default<span class="tag">&lt;/<span class="title">button</span>&gt;</span>
