--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 ---
 layout: default
-title: home
+title: 小柴火的博客
 ---
 
-<ul>
-	{% for post in site.posts %}
-		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-	{% endfor %}
-</ul>
+{% for post in site.posts %}
+	{{ content }}
+{% endfor %}
