--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: 小柴火的博客
 ---
 
 {% for post in site.posts %}
+	{{ post.tags }}
+	{{ post.category }}
 	{{ post.content }}
 	<p>&nbsp;</p>
 {% endfor %}
