--- a/list/index.html
+++ b/list/index.html
@@ -4,7 +4,7 @@ title: 小柴火的博客
 ---
 
 <ul>
-{% for post in site.posts %}
-	<li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
-{% endfor %}
+	{% for post in site.posts %}
+		<li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
+	{% endfor %}
 </ul>
