--- a/list/index.html
+++ b/list/index.html
@@ -5,6 +5,6 @@ title: 小柴火的博客
 
 <ul>
 	{% for post in site.posts %}
-		<li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
+		<li><a href="{{ post.url }}">{{ post.title }}</a>{{ post.date | date_to_string }}</li>
 	{% endfor %}
 </ul>
