--- a/list/index.html
+++ b/list/index.html
@@ -3,8 +3,15 @@ layout: archive
 title: 小柴火的博客
 ---
 
-<ul>
+<ul class="list-unstyled">
 	{% for post in site.posts %}
-		<li><a href="{{ post.url }}">{{ post.title }}</a>{{ post.date | date_to_string }}</li>
+		<li>
+			<div class="span8">
+				<a href="{{ post.url }}">{{ post.title }}</a>
+			<div>
+			<div class="span3 offset1">
+				{{ post.date | date_to_string }}
+			<div>
+		</li>
 	{% endfor %}
 </ul>
