--- a/list/index.html
+++ b/list/index.html
@@ -3,15 +3,8 @@ layout: archive
 title: 小柴火的博客
 ---
 
-<ul class="list-unstyled">
-	{% for post in site.posts %}
-		<li>
-			<div class="span8">
-				<a href="{{ post.url }}">{{ post.title }}</a>
-			<div>
-			<div class="span3 offset1">
-				{{ post.date | date_to_string }}
-			<div>
-		</li>
-	{% endfor %}
-</ul>
+{% for post in site.posts %}
+	<p>
+		{{ post.date | date_to_string }}&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ post.url }}">{{ post.title }}</a>
+	<p>
+{% endfor %}
